...
        android:layout_height="wrap_content"
        android:text="Habit name">

    </TextView>

    <EditText
        android:id="@+id/title_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/habit_title"
        android:maxLength="20"
        android:inputType="textPersonName"
...
