...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="250dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/search_user_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingTop="25dp"
            android:paddingRight="20dp"
            android:text="@string/sample_user"
...
