...
    <string name="userName">Name</string>
    <string name="password">Password</string>
    <string name="home">Home</string>
    <string name="habits">Habits</string>
    <string name="due">DUE</string>
    <string name="profile">Profile</string>
    <string name="add_habit_event">Add a Habit Event</string>
    <string name="confirm_pw">Confirm Password</string>
    <string name="age">Age</string>
    <string name="register">Register</string>
    <string name="account_already">Already Have an Account</string>
    <string name="habit_title">Habit Name</string>
    <string name="comment">Comment</string>
    <string name="tracking">How well am I tracking?</string>
    <string name="days">Days</string>
    <string name="reason">Habit Reason</string>
    <string name="add_photo">ADD PHOTO</string>
    <string name="update_photo">Update photo</string>
    <string name="add_location">ADD LOCATION</string>
    <string name="update_location">Update location</string>
...
