...
        android:layout_height="wrap_content"
        android:text="Habit">

    </TextView>

    <Spinner
        android:id="@+id/event_spinner"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="5dp" />

...
        android:layout_height="wrap_content"
        android:text="Event Comment">

    </TextView>

    <EditText
        android:id="@+id/comment_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:autofillHints="Comment"
        android:ems="10"
        android:hint="@string/comment"
...
